--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7158],[],[[4,0,0,[],[1,283,6874],[[0,5,6,0,7,8,0,0,[1,284,3990],[[284,2,9]]],[0,10,6,0,11,0,0,0,[1,4275,50],[]],[0,12,6,0,13,14,0,0,[1,4326,2],[]],[0,15,6,0,16,17,0,0,[1,4329,2552],[[4330,2,18]]],[3,19,0,0,0,0,0,0,[1,6882,274],[[4,20,0,0,0,0,0,0,[1,6882,35],[[0,21,6,0,22,23,24,0,[1,6882,34],[[6916,2,25]]],[0,26,27,0,28,24,0,0,[1,6916,1],[]]]],[4,29,0,0,0,0,0,0,[1,6917,24],[[0,21,6,0,22,23,24,0,[1,6918,22],[[6940,2,30]]],[0,26,27,0,28,24,0,0,[1,6940,1],[]]]],[4,31,0,0,0,0,0,0,[1,6941,31],[[0,21,6,0,22,23,24,0,[1,6941,30],[[6971,2,32]]],[0,26,27,0,28,24,0,0,[1,6971,1],[]]]],[4,33,0,0,0,0,0,0,[1,6972,24],[[0,21,6,0,22,23,24,0,[1,6972,23],[[6995,2,34]]],[0,26,27,0,28,24,0,0,[1,6996,0],[]]]],[4,35,0,0,0,0,0,0,[1,6996,25],[[0,21,6,0,22,23,24,0,[1,6996,24],[[7019,2,36]]],[0,26,27,0,28,24,0,0,[1,7020,0],[]]]],[4,37,0,0,0,0,0,0,[1,7021,27],[[0,21,6,0,22,23,24,0,[1,7021,27],[[7047,2,38]]],[0,26,27,0,28,24,0,0,[1,7048,0],[]]]],[4,39,0,0,0,0,0,0,[1,7049,37],[[0,21,6,0,22,23,24,0,[1,7049,36],[[7084,2,40]]],[0,26,27,0,28,24,0,0,[1,7085,1],[]]]],[4,41,0,0,0,0,0,0,[1,7086,24],[[0,21,6,0,22,23,24,0,[1,7087,22],[[7109,2,42]]],[0,26,27,0,28,24,0,0,[1,7110,0],[]]]],[4,43,0,0,0,0,0,0,[1,7111,21],[[0,21,6,0,22,23,24,0,[1,7111,20],[[7131,2,44]]],[0,26,27,0,28,24,0,0,[1,7131,1],[]]]],[4,45,0,0,0,0,0,0,[1,7132,24],[[0,21,6,0,22,23,24,0,[1,7133,21],[[7154,2,46]]],[0,26,27,0,28,24,0,0,[1,7154,2],[]]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,61],[],[[4,0,0,[],[1,41,17],[[0,5,6,0,7,8,0,0,[1,42,4],[[42,2,9]]],[0,10,11,0,12,13,14,0,[1,48,8],[[48,2,15],[55,2,16],[55,2,17]]],[0,18,6,0,19,20,0,0,[1,57,1],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Demo9 Suite","*c:\\RobotframeworkTraining\\Test\\selenium-suite\\demo9_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g/KT8ovSStKzE0tzy/KDilKzMzLzEvXD0ktLtEvTs1JzcsszdUtLs0sSdVPSc3Nt4wHs/WKQNqU7KhkkI1+oh0AiW85tA==","*TC3","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=chrome","*Opening browser 'chrome' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*20s","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=https://datatables.net/extensions/select/examples/checkbox/checkbox.html","eNrzL0jNy8xLVygtylFQt0lUyChKTbNVyigpKSi20tdPSSwBwqSc1GK9vNQS/dSKktS84sz8vGL94tSc1GSQSGJuAVBaPzkjNTk7Kb8CztDLKMnNUbKjlkk2+ol26gDTkUCd","*${counter}    IN RANGE    1    11","*${counter} = 1","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//table[@id='example']/tbody/tr[${counter}]/td[2]","*${value}","*${value} = Airi Satou","*Log To Console","*BuiltIn","*<p>Logs the given message to the console.\x3c/p>","*${counter} = 2","*${value} = Angelica Ramos","*${counter} = 3","*${value} = Ashton Cox","*${counter} = 4","*${value} = Bradley Greer","*${counter} = 5","*${value} = Brenden Wagner","*${counter} = 6","*${value} = Brielle Williamson","*${counter} = 7","*${value} = Bruno Nash","*${counter} = 8","*${value} = Caesar Vance","*${counter} = 9","*${value} = Cara Stevens","*${counter} = 10","*${value} = Cedric Kelly"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Demo3 Suite","*c:\\RobotframeworkTraining\\Test\\robot_suite\\demo3_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g/KT8ovSStKzE0tzy/KDilKzMzLzEvXD0ktLtEvAsnFF5dmlqTqp6Tm5htD2HpgcSU7aphio59oBwA71jeU","*TC3","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*${TEMPDIR}","*C:\\Users\\rahuly\\AppData\\Local\\Temp","*List Files In Directory","*OperatingSystem","*<p>Wrapper for `List Directory` that returns only files.\x3c/p>","*C:${/}Users${/}rahuly","*@{files}","*Listing contents of directory '<a href=\"file://C:\\Users\\rahuly\">C:\\Users\\rahuly\x3c/a>'.","eNqtkE0KwjAYRPc9RS+Q0KRFozvRqgtbwcYDpO2XEmjSkqSgiHfXCoI/O3FW7y1mFkPiUKoW3DzAjfJVZ6RqgnXYgvdgw952jRUa9+cgEyelB22EhlHzlBfbIOfHIj3g1YK/4EXQOKaSMFTVpUSEQIXYhEUoiihNWMLiejq7Yp7hspW/9Jad8UIZsNF3CLbQeCuMQ9r9e5y+jXNwfrxC3m9S5oHGDw4sroXHu/2GfDh9ujLqBrwjb54=","*@{files} = [ .gitconfig | F letter program.py | Maximumname.py | NETSH | NTUSER.DAT | NTUSER.DAT{a2332f18-cdbf-11ec-8680-002248483d79}.TM.blf | NTUSER.DAT{a2332f18-cdbf-11ec-8680-002248483d79}.TMContainer0000000...","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*${files}"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Demo9 Suite","name":"Demo9 Suite","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Demo3 Suite","name":"Demo3 Suite","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729596662905;
+window.output["baseMillis"] = 1729660210970;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7163;
+window.output["generated"] = 71;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
