--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7158],[],[[4,0,0,[],[1,283,6874],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,61],[],[[4,0,0,[],[1,41,17],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Demo9 Suite","*c:\\RobotframeworkTraining\\Test\\selenium-suite\\demo9_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g/KT8ovSStKzE0tzy/KDilKzMzLzEvXD0ktLtEvTs1JzcsszdUtLs0sSdVPSc3Nt4wHs/WKQNqU7KhkkI1+oh0AiW85tA==","*TC3"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Demo3 Suite","*c:\\RobotframeworkTraining\\Test\\robot_suite\\demo3_suite.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g/KT8ovSStKzE0tzy/KDilKzMzLzEvXD0ktLtEvAsnFF5dmlqTqp6Tm5htD2HpgcSU7aphio59oBwA71jeU","*TC3"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Demo9 Suite","name":"Demo9 Suite","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Demo3 Suite","name":"Demo3 Suite","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1729596662905;
+window.output["baseMillis"] = 1729660210970;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7163;
+window.output["generated"] = 71;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
